--- a/templates/CHANGELOG_unified.md.tmpl
+++ b/templates/CHANGELOG_unified.md.tmpl
@@ -6,4 +6,4 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
 
 ## [{{ .Version }}] - {{ .Date.Format "2006-01-02" }}
 
-{{ .CombinedChangelog }}
+{{ .UnifiedChangelog }}
