Added upgrade instruction links to release note template
This will allow us to use upgrade links in the ifnal outputs though we
haven't tied the input to output together yet.

--- a/templates/RELEASE_NOTES_unified.md.tmpl
+++ b/templates/RELEASE_NOTES_unified.md.tmpl
@@ -6,6 +6,7 @@ All notable changes to this project will be documented in this file.
 ## Table of Contents
 
 - [Components](#components)
+- [Upgrade Instructions](#upgrade-instructions)
 - [Changes](#changes)
 
 ## Components
@@ -13,7 +14,16 @@ All notable changes to this project will be documented in this file.
 These are the components that combine to create this Conjur OSS Suite release and links
 to their releases:
 {{ range .Components }}
-- [{{ .Repo }} {{ .ReleaseName }} ({{ .ReleaseDate }})](https://github.com/{{ .Repo }}/releases/tag/{{ .ReleaseName }})
+- **[{{ .Repo }} {{ .ReleaseName }}](https://github.com/{{ .Repo }}/releases/tag/{{ .ReleaseName }})** ({{ .ReleaseDate }})
+{{- end }}
+
+## Upgrade Instructions
+
+Upgrade instructions are available for the following components:
+{{ range .Components }}
+{{- if .UpgradeURL }}
+- [{{ .Repo }}]({{ .UpgradeURL }})
+{{- end }}
 {{- end }}
 
 ## Changes
