Added certification badges to components in release notes
This change ties the inputs and the new partial templates and adds
output of the combined items into the release notes. This change
effectively finishes the functionality of adding the badges to
release notes.

--- a/templates/RELEASE_NOTES_unified.md.tmpl
+++ b/templates/RELEASE_NOTES_unified.md.tmpl
@@ -14,7 +14,7 @@ All notable changes to this project will be documented in this file.
 These are the components that combine to create this Conjur OSS Suite release and links
 to their releases:
 {{ range .Components }}
-- **[{{ .Repo }} {{ .ReleaseName }}](https://github.com/{{ .Repo }}/releases/tag/{{ .ReleaseName }})** ({{ .ReleaseDate }})
+- **[{{ .Repo }} {{ .ReleaseName }}](https://github.com/{{ .Repo }}/releases/tag/{{ .ReleaseName }})** ({{ .ReleaseDate }}) {{ template "certification_badge.md" . -}}
 {{- end }}
 
 ## Upgrade Instructions
