--- a/templates/RELEASE_NOTES_unified.md.tmpl
+++ b/templates/RELEASE_NOTES_unified.md.tmpl
@@ -32,17 +32,21 @@ Upgrade instructions are available for the following components:
 {{- end }}
 
 ## Changes
-
 The following are changes to the constituent components since the last Conjur
 OSS Suite release:
 {{ range .Components -}}
+- [{{ .Repo }}](#{{ markdownHeaderLink .Repo }})
+{{ end -}}
+{{- range .Components }}
+### {{ .Repo }}
 {{ range .Changelogs }}
-### [{{ .Repo }} v{{ .Version}}](https://github.com/{{ .Repo }}/releases/tag/v{{ .Version }}) ({{ .Date }})
-{{ range $sectionKey, $sectionValues := .Sections }}
-#### {{ $sectionKey }}
+#### [v{{ .Version}}](https://github.com/{{ .Repo }}/releases/tag/v{{ .Version }}) ({{.Date }})
+{{- range $sectionKey, $sectionValues := .Sections }}
+* **{{ $sectionKey }}**
 {{- range $sectionItem := $sectionValues }}
-- {{ $sectionItem -}}
-{{ end }}
-{{ end }}
+    - {{ $sectionItem }}
 {{- end }}
 {{- end }}
+
+{{- end }}
+{{- end -}}
