112 - HTML Template Output Converts Markdown Tags to HTML Anchors
If a markdown-type link is found in a changelog list item, it
is replaced with an HTML anchor

- Introduced a new function map function for the template
generator, called markdownHyperlinksToHTMLHyperlinks
- Added unit test for markdownHyperlinksToHTMLHyperlinks

--- a/templates/RELEASE_NOTES_unified.htm.tmpl
+++ b/templates/RELEASE_NOTES_unified.htm.tmpl
@@ -48,7 +48,7 @@
               <li><strong>{{ $sectionKey }}</strong>
                 <ul>
                 {{- range $sectionItem := $sectionValues }}
-                  <li>{{ $sectionItem -}}</li>
+                  <li>{{ markdownHyperlinksToHTMLHyperlinks $sectionItem -}}</li>
                 {{- end }}
                 </ul>
               </li>
