Unreleased Report: Include links to unreleased changes at HEAD
This link is conditionally added immediately after the latest version tag. The condition is if there are new commits beyond the latest version tag.

--- a/templates/UNRELEASED_CHANGES_unified.md.tmpl
+++ b/templates/UNRELEASED_CHANGES_unified.md.tmpl
@@ -15,6 +15,9 @@ These are the component versions that have yet not been included in the Conjur O
 {{ range .Changelogs }}
 - [{{ .Repo }} v{{ .Version}} ({{ .Date }})](https://github.com/{{ .Repo }}/releases/tag/v{{ .Version }})
 {{- end }}
+{{- if .UnreleasedChangesURL }}
+- [{{ .Repo }} @HEAD]({{ .UnreleasedChangesURL }})
+{{- end }}
 {{- end }}
 
 ## Unreleased Changes
