--- a/templates/RELEASE_NOTES_unified.htm.tmpl
+++ b/templates/RELEASE_NOTES_unified.htm.tmpl
@@ -3,10 +3,10 @@
   <head></head>
   <body>
     <h1>Release Notes</h1>
-    <p>The following components were included or enhanced in the {{ toLower .Version }} Conjur OSS suite.</p>
+    <p>The following components were included or enhanced in the Conjur OSS suite version {{ toLower .Version }}.</p>
 
     <h2>Components</h2>
-    <p>These are the components that comprise the Conjur Open Source Suite with links to their GitHub releases:</p>
+    <p>The following components, with links to their GitHub releases, comprise the Conjur Open Source Suite:</p>
     <ul>
       {{- range .Components }}
       <li>
@@ -28,7 +28,7 @@
     </ul>
 
     <h2>What's New by Component</h2>
-    <p>The following components were introduced or enhanced in the {{ toLower .Version }} Conjur OSS suite.</p>
+    <p>The following components were introduced or enhanced in the Conjur OSS suite version {{ toLower .Version }}.</p>
     <MadCap:listOfProxy style="mc-list-of-tag: h3;mc-list-of-class: list;mc-list-of-paragraph-class: RN;" />
 
     {{- range .Components }}
