--- a/templates/testdata/RELEASE_NOTES_unified.htm
+++ b/templates/testdata/RELEASE_NOTES_unified.htm
@@ -3,10 +3,10 @@
   <head></head>
   <body>
     <h1>Release Notes</h1>
-    <p>The following components were included or enhanced in the 11.22.33 Conjur OSS suite.</p>
+    <p>The following components were included or enhanced in the Conjur OSS suite version 11.22.33.</p>
 
     <h2>Components</h2>
-    <p>These are the components that comprise the Conjur Open Source Suite with links to their GitHub releases:</p>
+    <p>The following components, with links to their GitHub releases, comprise the Conjur Open Source Suite:</p>
     <ul>
       <li>
         <p><a href="https://github.com/cyberark/conjur/releases/tag/v1.4.4">cyberark/conjur v1.4.4</a> (2020-01-03)</p>
@@ -25,7 +25,7 @@
     </ul>
 
     <h2>What's New by Component</h2>
-    <p>The following components were introduced or enhanced in the 11.22.33 Conjur OSS suite.</p>
+    <p>The following components were introduced or enhanced in the Conjur OSS suite version 11.22.33.</p>
     <MadCap:listOfProxy style="mc-list-of-tag: h3;mc-list-of-class: list;mc-list-of-paragraph-class: RN;" />
     <h3 class="list">cyberark/conjur</h3>
       <h4><a href="https://github.com/cyberark/conjur/releases/tag/v1.3.6">v1.3.6</a> (2020-02-01)</h4>
