--- a/templates/RELEASE_NOTES_unified.md.tmpl
+++ b/templates/RELEASE_NOTES_unified.md.tmpl
@@ -14,8 +14,12 @@ All notable changes to this project will be documented in this file.
 
 These are the components that combine to create this Conjur OSS Suite release and links
 to their releases:
+{{- range .SuiteCategories }}
+
+### {{ .CategoryName }}
 {{ range .Components }}
 - **[{{ .Repo }} {{ .ReleaseName }}](https://github.com/{{ .Repo }}/releases/tag/{{ .ReleaseName }})** ({{ .ReleaseDate }}) {{ template "certification_badge.md" . -}}
+{{- end }}
 {{- end }}
 
 ## Installation Instructions for the Suite Release Version of Conjur
@@ -25,18 +29,25 @@ to their releases:
 ## Upgrade Instructions
 
 Upgrade instructions are available for the following components:
-{{ range .Components }}
+{{- range .SuiteCategories }}
+{{- range .Components }}
 {{- if .UpgradeURL }}
 - [{{ .Repo }}]({{ .UpgradeURL }})
 {{- end }}
 {{- end }}
+{{- end -}}
 
 ## Changes
 The following are changes to the constituent components since the last Conjur
 OSS Suite release:
-{{ range .Components -}}
+{{- range .SuiteCategories }}
+{{- range .Components }}
+{{- if ne (len .Changelogs) 0 }}
 - [{{ .Repo }}](#{{ markdownHeaderLink .Repo }})
 {{ end -}}
+{{- end -}}
+
+{{ range .SuiteCategories }}
 {{- range .Components }}
 {{- if ne (len .Changelogs) 0 }}
 ### {{ .Repo }}
@@ -51,3 +62,4 @@ OSS Suite release:
 {{- end }}
 {{- end }}
 {{- end }}
+{{- end -}}
