--- a/templates/RELEASE_NOTES_unified.htm.tmpl
+++ b/templates/RELEASE_NOTES_unified.htm.tmpl
@@ -16,7 +16,7 @@
       </li>
       {{- end }}
     </ul>
-    {{ end }}
+    {{- end }}
 
     <h2>Upgrade Instructions</h2>
     <p>Upgrade instructions are available for the following suite components:</p>
@@ -54,7 +54,7 @@
     {{- end }}
     {{- end }}
     {{- end }}
-    {{- end }}
+    {{- end -}}
     {{- end }}
   </body>
 </html>
