Update release notes to not list unchanged repos
Before this commit, unchanged repos were still listed in the "Changes" section
of the RNs, even though there were no changes to report in that section. This
meant there was a header link that linked to nowhere. This commit removes that
link and updates the one affected test.

--- a/templates/RELEASE_NOTES_unified.md.tmpl
+++ b/templates/RELEASE_NOTES_unified.md.tmpl
@@ -45,6 +45,7 @@ OSS Suite release:
 {{- if ne (len .Changelogs) 0 }}
 - [{{ .Repo }}](#{{ markdownHeaderLink .Repo }})
 {{- end }}
+{{- end }}
 {{- end -}}
 
 {{ range .SuiteCategories }}
