Add suite.yml Description to docs release output
We'd like to be able to publish some "What's new" type content with each
suite release, so in this commit I've repurposed the suite Description to
be a Description of what's new in the release. This gets added to the beginning
of the HTML release notes in its own paragraph.

--- a/templates/RELEASE_NOTES_unified.htm.tmpl
+++ b/templates/RELEASE_NOTES_unified.htm.tmpl
@@ -6,6 +6,9 @@
   <head></head>
   <body>
     <h1>Version {{ toLower .Version }}</h1>
+{{- if .Description }}
+    <p>{{ .Description }}</p>
+{{- end }}
     <p>The following components are included or enhanced in the Conjur OSS suite version {{ toLower .Version }}.</p>
 
     <h2>Components</h2>
