--- a/templates/testdata/RELEASE_NOTES_unified.htm
+++ b/templates/testdata/RELEASE_NOTES_unified.htm
@@ -3,6 +3,7 @@
   <head></head>
   <body>
     <h1>Version 11.22.33</h1>
+    <p>A very special suite release.</p>
     <p>The following components are included or enhanced in the Conjur OSS suite version 11.22.33.</p>
 
     <h2>Components</h2>
