--- a/templates/testdata/RELEASE_NOTES_unified.htm
+++ b/templates/testdata/RELEASE_NOTES_unified.htm
@@ -69,8 +69,7 @@
 
     <h2>What's New by Component</h2>
     <p>The following components were introduced or enhanced in the Conjur OSS suite version 11.22.33.</p>
-    <MadCap:listOfProxy style="mc-list-of-tag: h3;mc-list-of-class: list;mc-list-of-paragraph-class: RN;" />
-    <h3 class="list">cyberark/conjur</h3>
+    <h3 class="itt">cyberark/conjur</h3>
     <h4><a href="https://github.com/cyberark/conjur/releases/tag/v1.3.6" target="_blank">v1.3.6</a> (2020-02-01)</h4>
     <p><strong>Changed</strong></p>
     <ul>
@@ -112,7 +111,7 @@
         <p>144Fix</p>
       </li>
     </ul>
-    <h3 class="list">cyberark/secretless-broker</h3>
+    <h3 class="itt">cyberark/secretless-broker</h3>
     <h4><a href="https://github.com/cyberark/secretless-broker/releases/tag/v1.4.2" target="_blank">v1.4.2</a> (2020-01-08)</h4>
     <p><strong>Added</strong></p>
     <ul>
